# dvc-data

./: .cookiecutter.json  .cruft.json  .gitignore  .pre-commit-config.yaml  .safety-policy.yml  CONTRIBUTING.rst  README.rst  cli.py  dataset.dvc  noxfile.py  pyproject.toml  setup.cfg
.github/: dependabot.yml
.github/workflows/: benchmark.yml  release.yml  tests.yml  update-template.yaml
src/dvc_data/: __init__.py  __main__.py  build.py  callbacks.py  checkout.py  cli.py  compat.py  diff.py  fs.py  gc.py  index.py  json_compat.py  repo.py  stage.py  status.py  transfer.py  tree.py  utils.py
src/dvc_data/db/: __init__.py  index.py  local.py  reference.py
src/dvc_data/hashfile/: .state.py.swp  __init__.py  _ignore.py  _progress.py  build.py  cache.py  checkout.py  db.py  diff.py  gc.py  hash.py  hash_info.py  meta.py  obj.py  state.py  status.py  transfer.py  tree.py  utils.py
src/dvc_data/hashfile/db/: __init__.py  index.py  local.py  migrate.py  reference.py
src/dvc_data/index/: __init__.py  add.py  build.py  checkout.py  collect.py  diff.py  fetch.py  index.py  push.py  save.py  serialize.py  update.py  view.py
src/dvc_data/objects/: reference.py  tree.py
tests/: __init__.py  conftest.py  test_checkout.py  test_diff.py  test_dvc_data.py  test_index.py
tests/benchmarks/: test_checkout.py  test_index.py  test_stats.py
tests/hashfile/: test_build.py  test_cache.py  test_checkout.py  test_db.py  test_db_index.py  test_diff.py  test_hash.py  test_hash_stream.py  test_istextfile.py  test_obj.py  test_state.py  test_tree.py  test_utils.py
tests/index/: conftest.py  test_build.py  test_checkout.py  test_diff.py  test_fs.py  test_index.py  test_storage.py
tests/objects/: test_tree.py
