[build-system]
requires = ["setuptools>=48", "setuptools_scm[toml]>=6.3.1"]
build-backend = "setuptools.build_meta"

[tool.setuptools_scm]

[project]
name = "dvc-data"
description = "dvc data"
readme = "README.rst"
license = {text = "Apache-2.0"}
authors = [{ name = "Iterative", email = "support@dvc.org" }]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Development Status :: 4 - Beta",
]
requires-python = ">=3.8"
dynamic = ["version"]
dependencies = [
    "funcy>=1.14",
    "dictdiffer>=0.8.1",
    "pygtrie>=2.3.2",
    "shortuuid>=0.5.0",
    "dvc-objects>=1.1.0,<2",
    "diskcache>=5.2.1",
    "attrs>=21.3.0",
    "sqltrie>=0.9.0,<1",
]

[project.urls]
Issues = "https://github.com/iterative/dvc-data/issues"
Source = "https://github.com/iterative/dvc-data"

[project.optional-dependencies]
cli = [
    "typer[all]>=0.6",
    "rich>=10.11.0,<14.0.0",
]
all = [
    "dvc-data[cli]",
]
tests = [
    "pytest==7.2.0",
    "pytest-sugar==0.9.6",
    "pytest-cov==4.0.0",
    "pytest-mock==3.10.0",
    "pytest-benchmark==4.0.0",
    "mypy==1.5.1",
    "pytest-servers[s3]==0.1.3",
]
dev = [
    "dvc-data[all]",
    "dvc-data[tests]",
    "blake3>=0.3.1",
]

[project.scripts]
dvc = "dvci_data.__main__:main"

[tool.setuptools.package-data]
dvc_objects = ["py.typed"]

[tool.setuptools.packages.find]
where = ["src"]
namespaces = false

[tool.pytest.ini_options]
addopts = "-ra -Werror --benchmark-skip"

[tool.coverage.run]
branch = true
source = ["dvc_data", "tests"]

[tool.coverage.paths]
source = ["src", "*/site-packages"]

[tool.coverage.report]
show_missing = true
exclude_lines = [
    "pragma: no cover",
    "if __name__ == .__main__.:",
    "if typing.TYPE_CHECKING:",
    "if TYPE_CHECKING:",
    "raise NotImplementedError",
    "raise AssertionError",
    "@overload",
]

[tool.mypy]
# Error output
show_column_numbers = true
show_error_codes = true
show_error_context = true
show_traceback = true
pretty = true
check_untyped_defs = true
# Warnings
warn_no_return = true
warn_redundant_casts = true
warn_unreachable = true
strict_equality = true
no_implicit_optional = true
warn_unused_configs = true
files = ["src", "tests"]

[[tool.mypy.overrides]]
ignore_missing_imports = true
module = [
    "blake3",
    "fsspec.*",
    "funcy",
    "diskcache",
    "pygtrie",
    "dictdiffer",
    "shortuuid.*",
]

[tool.codespell]
ignore-words-list = "fo"
