[build-system]
requires = ["setuptools>=77", "setuptools_scm[toml]>=8"]
build-backend = "setuptools.build_meta"

[tool.setuptools_scm]

[project]
name = "dvc-data"
description = "DVC's data management subsystem"
readme = "README.rst"
license = "Apache-2.0"
license-files = ["LICENSE"]
authors = [{ name = "Iterative", email = "support@dvc.org" }]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Development Status :: 4 - Beta",
]
requires-python = ">=3.9"
dynamic = ["version"]
dependencies = [
    "attrs>=21.3.0",
    "dictdiffer>=0.8.1",
    "diskcache>=5.2.1",
    "dvc-objects>=4.0.1,<6",
    "fsspec>=2024.2.0",
    "funcy>=1.14; python_version < '3.12'",
    "pygtrie>=2.3.2",
    "sqltrie>=0.11.0,<1",
    "tqdm>=4.63.1,<5",
    "orjson>=3,<4; implementation_name=='cpython'",
]

[project.urls]
Issues = "https://github.com/iterative/dvc-data/issues"
Source = "https://github.com/iterative/dvc-data"

[project.optional-dependencies]
cli = [
    "typer-slim>=0.12",
]
all = [
    "dvc-data[cli]",
]
tests = [
    "pytest>=7,<9",
    "pytest-sugar",
    "pytest-cov>=4.1.0",
    "pytest-mock",
    "pytest-benchmark>=4",
    "pytest-servers==0.5.11",
]
dev = [
    "dvc-data[all]",
    "dvc-data[tests]",
    "mypy==1.17.0",
    "types-tqdm",
]

[project.scripts]
dvc-data = "dvc_data.__main__:main"

[tool.setuptools.package-data]
dvc_data = ["py.typed"]

[tool.setuptools.packages.find]
where = ["src"]
namespaces = false

[tool.pytest.ini_options]
addopts = "-ra --benchmark-skip"
filterwarnings = [
    "error",
    "ignore:datetime.datetime.*:DeprecationWarning",
]

[tool.coverage.run]
branch = true
source = ["dvc_data", "tests"]

[tool.coverage.paths]
source = ["src", "*/site-packages"]

[tool.coverage.report]
show_missing = true
exclude_lines = [
    "pragma: no cover",
    "if __name__ == .__main__.:",
    "if typing.TYPE_CHECKING:",
    "if TYPE_CHECKING:",
    "raise NotImplementedError",
    "raise AssertionError",
    "@overload",
]

[tool.mypy]
# Error output
show_column_numbers = true
show_error_codes = true
show_error_context = true
show_traceback = true
pretty = true
check_untyped_defs = true
# Warnings
warn_no_return = true
warn_redundant_casts = true
warn_unreachable = true
strict_equality = true
no_implicit_optional = true
warn_unused_configs = true
files = ["src", "tests"]

[[tool.mypy.overrides]]
ignore_missing_imports = true
module = [
    "fsspec.*",
    "funcy",
    "diskcache",
    "pygtrie",
    "dictdiffer",
    "shortuuid.*",
]

[tool.codespell]
ignore-words-list = "fo"
skip = "CODE_OF_CONDUCT.rst"

[tool.ruff]
show-fixes = true

[tool.ruff.lint]
preview = true
explicit-preview-rules = true
ignore = [
    "A005", # stdlib-module-shadowing
    "PLC0415",  # import-outside-top-level
    "PLR2004", # magic-value-comparison
    "PLW2901", # redefined-loop-name
    "RET501", # unnecessary-return-none
    "RET502", # implicit-return-value
    "RET503", # implicit-return
    "S101", # assert
    "SIM105", # suppressible-exception
    "SIM108", # if-else-block-instead-of-if-exp
    "SIM117", # multiple-with-statements
]
select = [
    "A", # flake8-buitlins
    "ASYNC", # flake8-async
    "B", # flake8-bugbear
    "BLE", # flake8-blind-except
    "C4", # flake8-comprehensions
    "C90", # mccabe
    "DTZ", # flake8-datetimez
    "E", # pycodestyle - Error
    "EXE", # flake8-executable
    "F", # pyflakes
    "FLY", # flynt-rules
    "G", # flake8-logging-format
    "I", # isort
    "ICN", # flake8-import-conventions
    "INP", # flake8-no-pep420
    "ISC", # flake8-implicit-str-concat
    "N", # pep8-naming
    "PERF101", # perflint
    "PGH", # pygrep-hooks
    "PIE", # flake8-pie
    "PL", # pylint
    "PT", # flake8-pytest-style
    "PYI", # flake8-pyi
    "Q", # flae8-quotes
    "RET", # flake8-return
    "RSE", # flake8-raise
    "RUF", # ruff
    "S", # flake8-bandit
    "SIM", # flake8-simplify
    "SLOT", # flake8-slots
    "T10", # flake8-debugger
    "T20", # flake8-print
    "TCH", # flake8-type-checking
    "TCH", # flake8-type-checking
    "TID", # flake8-tidy-imports
    "UP", # pyupgrade
    "W", # pycodestyle - Warning
    "YTT", # flake8-2020
]

[tool.ruff.lint.flake8-pytest-style]
fixture-parentheses = false
mark-parentheses = false
parametrize-names-type = "csv"

[tool.ruff.lint.flake8-tidy-imports]
[tool.ruff.lint.flake8-tidy-imports.banned-api]
"funcy.cached_property" = {msg = "use `from dvc_data.compat import cached_property` instead."}
"functools.cached_property" = {msg = "use `from dvc_data.compat import cached_property` instead."}

[tool.ruff.lint.flake8-type-checking]
strict = true

[tool.ruff.lint.isort]
known-first-party = ["dvc_data"]

[tool.ruff.lint.pylint]
max-args = 10

[tool.ruff.lint.per-file-ignores]
"src/dvc_data/cli.py" = ["T201", "B008"]
