[metadata]
description = dvc data
name = dvc-data
long_description = file: README.rst
long_description_content_type = text/x-rst
license = Apache-2.0
license_file = LICENSE
url = https://github.com/iterative/dvc-data
platforms=any
authors = Iterative
maintainer_email = support@dvc.org
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Development Status :: 4 - Beta

[options]
python_requires = >=3.8
zip_safe = False
package_dir=
    =src
packages = find:
install_requires=
    funcy>=1.14
    dictdiffer>=0.8.1
    pygtrie>=2.3.2
    shortuuid>=0.5.0
    dvc-objects==0.0.20
    diskcache>=5.2.1
    nanotime>=0.5.2

[options.extras_require]
cli =
    typer>0.4,<0.6
    rich>=10.11.0,<13.0.0
all =
    %(cli)s
tests =
    pytest==7.1.2
    pytest-sugar==0.9.4
    pytest-cov==3.0.0
    pytest-mock==3.8.1
    pylint==2.14.4
    mypy==0.961
    moto[server]==3.1.16
    requests==2.28.1
    types-requests==2.28.0
    universal-pathlib==0.0.19
    s3fs[boto3]>=2022.02.0; python_version < '3.11'
dev =
    %(all)s
    %(tests)s

[options.entry_points]
console_scripts =
    dvc-data = dvc_data.__main__:main

[options.packages.find]
exclude =
    tests
    tests.*
where=src

[flake8]
ignore=
    E203, # Whitespace before ':'
    E266, # Too many leading '#' for block comment
    W503, # Line break occurred before a binary operator
    P1,  # unindexed parameters in the str.format, see:
    # https://pypi.org/project/flake8-string-format/
max_line_length = 79
max-complexity = 15
select = B,C,E,F,W,T4,B902,T,P
show_source = true
count = true
per-file-ignores =
    src/dvc_data/cli.py:B008
