[metadata]
description = dvc data
name = dvc-data
long_description = file: README.rst
long_description_content_type = text/x-rst
license = Apache-2.0
license_file = LICENSE
url = https://github.com/iterative/dvc-data
platforms=any
authors = Iterative
maintainer_email = support@dvc.org
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Development Status :: 4 - Beta

[options]
python_requires = >=3.8
zip_safe = False
package_dir=
    =src
packages = find:
install_requires=
    funcy>=1.14
    dictdiffer>=0.8.1
    pygtrie>=2.3.2
    shortuuid>=0.5.0
    dvc-objects>=0.23.0,<1
    diskcache>=5.2.1
    nanotime>=0.5.2
    attrs>=21.3.0
    sqltrie>=0.6.0,<1

[options.extras_require]
cli =
    typer[all]>=0.6
    rich>=10.11.0,<14.0.0
all =
    %(cli)s
tests =
    pytest==7.2.0
    pytest-sugar==0.9.6
    pytest-cov==4.0.0
    pytest-benchmark==4.0.0
    pytest-mock==3.10.0
    pylint==2.15.0
    mypy==0.971
    pytest-servers[s3]==0.1.3
dev =
    %(all)s
    %(tests)s
    blake3>=0.3.1

[options.entry_points]
console_scripts =
    dvc-data = dvc_data.__main__:main

[options.packages.find]
exclude =
    tests
    tests.*
where=src

[options.package_data]
dvc_data = py.typed

[flake8]
ignore=
    E203, # Whitespace before ':'
    E266, # Too many leading '#' for block comment
    W503, # Line break occurred before a binary operator
    P1,  # unindexed parameters in the str.format, see:
    # https://pypi.org/project/flake8-string-format/
max_line_length = 79
max-complexity = 15
select = B,C,E,F,W,T4,B902,T,P
show_source = true
count = true
per-file-ignores =
    src/dvc_data/cli.py:B008
